# python-project-lvl2

./: Makefile  README.md  pyproject.toml
gendiff/: __init__.py  parsers.py
gendiff/formatters/: __init__.py  json_formatter.py  plain_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_json.txt
